hero section input width has been fixed on smaller screen

--- a/CSS/media.css
+++ b/CSS/media.css
@@ -27,7 +27,7 @@
   }
   .hero-input {
     height: 48px;
-    width: 100%;
+    width: 98%;
     border-radius: 5px;
     border: none;
     padding: 12px 20px 12px 45px;
